k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: raster-svg
  labels:
    name: raster-svg
